1.16.5 backport